--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Build documentation
         run: cargo doc --no-deps
 
+      - name: Move main docs to root
+        run: mv target/doc/connect_four/* target/doc/
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
