--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -1,5 +1,5 @@
 
-name: Deploy Docs
+name: Deploy Rust Docs
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
       - main  # Change this to the branch you use for development, if not `main`
 
 jobs:
-  deploy:
+  deploy-docs:
     runs-on: ubuntu-latest
 
     steps:
